k8s/coma/apps/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.188.211
  listeners:
    - name: artichoke-cc-http
      port: 80
      protocol: HTTP
    - name: artichoke-cc-https
      port: 443
      protocol: HTTPS
      hostname: "*.artichoke.cc"
      tls:
        certificateRefs:
          - name: artichokecc-wildcard-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
